# bxl_eda_worker

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  sources.toml
.github/workflows/: daily-digest.yml  seed-archive.yml
docs/: index.html  style.css
docs/archive/: 2026-04-27.html  2026-04-28.html  2026-04-29.html  2026-05-01.html  2026-05-02.html  2026-05-03.html  2026-05-04.html  2026-05-05.html  2026-W01.html  2026-W02.html  2026-W03.html  2026-W04.html  2026-W05.html  2026-W06.html  2026-W07.html  2026-W08.html  2026-W09.html  2026-W10.html  2026-W11.html  2026-W12.html  2026-W13.html  2026-W14.html  2026-W15.html  2026-W16.html  2026-W17.html  index.html
hub/: README.md  index.html
src/bxl_eda_worker/: __main__.py  analyze.py  classify.py  config.py  digest.py  llm_cache.py  models.py  render_html.py  seed.py  storage.py  worker.py
src/bxl_eda_worker/fetchers/: __init__.py  headless.py  html.py  rss.py
tests/: test_analyze.py  test_classify.py  test_digest.py  test_render_html.py  test_seed.py  test_storage.py
