[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bxl_eda_worker"
version = "0.1.0"
description = "Daily digest of EU foreign-policy, Middle East and sanctions developments out of Brussels, with a Swiss lens."
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "feedparser>=6.0",
  "selectolax>=0.3.21",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
bxl-eda-worker = "bxl_eda_worker.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
